--- a/style.css
+++ b/style.css
@@ -3,25 +3,56 @@ html, body {
     padding: 0;
     font-family: Raleway, sans-serif;
     font-style: normal;
+    display:flex;
+    flex-direction: column;
+}
+
+.sidebar {
+
+}
+
+.nav-list {
+    padding: 25px 0 0 25px;
+    margin: 0;
+    list-style-type: none;
+}
+
+.nav-link {
+    cursor: pointer;
+    margin-bottom: 8px;
+}
+
+.nav-link a {
+    color: #000;
+    text-decoration: none;
+}
+
+.nav-link a:hover {
+    text-decoration: underline;
+}
+
+.nav-link .active {
+    color: #FF6200;
+    text-decoration: underline
 }
 
 .container {
     margin:0 auto;
-    padding:25px;
     display: flex;
     flex-direction: column;
 }
 
 .heading {
+    margin-left: 25px;
     font-size: 22px;
     font-weight: bold;
     line-height: 56px;
     color: #FF6200;
-    margin: 15px 0;
 }
 
 .sub-heading {
     font-size: 20px;
+    margin-bottom: 15px;
 }
 
 .card {
@@ -34,7 +65,6 @@ html, body {
 }
 
 .form {
-    margin-top: 25px;
     width: 100%;
     flex-direction: column;
 }
@@ -127,8 +157,27 @@ label {
     border-top: 1px solid #FF6200;
 }
 
-@media screen and (min-width: 580px) {
+@media screen and (min-width: 795px) {
+
+    body {
+        flex-direction: row;
+    }
+
+    .nav-link {
+        margin-bottom: 12px;
+    }
+
+    .sidebar {
+        margin-top: 66px;
+        padding: 20px 0 0 60px;
+    }
+
+    .container {
+        padding:25px;
+    }
+
     .heading {
+        margin: 15px 0;
         font-size: 28px;
     }
     .form-group {
@@ -159,8 +208,11 @@ label {
     }
 }
 
-@media screen and (min-width: 875px) {
-    .card , .form {
-        width: 700px;
+@media screen and (min-width: 992px) {
+    .container .card {
+        width: 680px;
+    }
+    .form {
+        width: 450px;
     }
 }
