--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .card {
-    padding: 12px 20px 24px 20px;
+    padding: 12px 30px 24px;
     box-shadow: 0px 15px 33px rgba(0, 0, 0, 0.2);
 }
 
@@ -159,7 +159,7 @@ h1,h2,h3,h4,h5,h6 {
     border-bottom: 1px solid lightgray;
 }
 
-@media screen and (min-width: 795px) {
+@media screen and (min-width: 765px) {
 
     h1 {
         font-size: 2em;
