--- a/style.css
+++ b/style.css
@@ -3,10 +3,25 @@ html, body {
     padding: 0;
     font-family: 'Roboto', serif;
     font-style: normal;
+    background-color: #f5f5f5;
 }
 
 h1 {
     font-size: 1.5em;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+}
+
+.sidebar .card {
+    margin: 20px 0;
+}
+
+#logo {
+    margin-left: 20px;
+    height: 30px;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -23,7 +38,7 @@ h1,h2,h3,h4,h5,h6 {
 .content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .input-group {
@@ -36,6 +51,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .header {
+    background-color: white;
     height: 60px;
     box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.15);
 }
@@ -76,8 +92,9 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .card {
+    background-color: #fff;
     padding: 12px 30px 24px;
-    box-shadow: 0px 15px 33px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 5px 14px rgba(0, 0, 0, 0.2);
 }
 
 .form {
@@ -175,7 +192,7 @@ h1,h2,h3,h4,h5,h6 {
     }
 
     .btn {
-        margin: 0 4px;
+        margin-right: 4px;
     }
 
     .content {
@@ -185,13 +202,27 @@ h1,h2,h3,h4,h5,h6 {
     .btn-group {
         display: flex;
     }
+    .nav-list {
+        width: 200px;
+    }
+    .sidebar {
+        padding: 20px;
+    }
+    
+    .sidebar .card {
+        font-size: 0.8em;
+    }
+
+    .container {
+        width: 60%;
+    }
+    .form {
+        width: 100%;     
+    }
 }
 
 @media screen and (min-width: 992px) {
-    .container .card {
-        
-    }
     .form {
-        
+        width: 350px;
     }
 }
